added siteground ssh port

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,6 +10,8 @@ Text Domain: kotha-child
 // Colors
 //http://www.colourlovers.com/palette/1457027/Sea_Calm by Miaka
 
+// for pushing live // ssh caryslou@us110.siteground.us -p18765
+
 $cream: rgb(236,235,215);
 $green: rgb(186,220,204);
 $tan: rgb(196,122,73);
